QtBeef/src/Qt/qitemselectionmodel.bf

extension CQt
{
	[LinkName("QItemSelectionModel_new")]
	public static extern QItemSelectionModel_Ptr* QItemSelectionModel_new();
	[LinkName("QItemSelectionModel_new2")]
	public static extern QItemSelectionModel_Ptr* QItemSelectionModel_new2(QAbstractItemModel_Ptr* model, QObject_Ptr* parent);
	[LinkName("QItemSelectionModel_new3")]
	public static extern QItemSelectionModel_Ptr* QItemSelectionModel_new3(QAbstractItemModel_Ptr* model);
	[LinkName("QItemSelectionModel_Delete")]
	public static extern void QItemSelectionModel_Delete(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_MetaObject")]
	public static extern QMetaObject_Ptr* QItemSelectionModel_MetaObject(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_Qt_Metacast")]
	public static extern void* QItemSelectionModel_Qt_Metacast(QItemSelectionModel_Ptr* self, c_char* param1);
	[LinkName("QItemSelectionModel_Qt_Metacall")]
	public static extern c_int QItemSelectionModel_Qt_Metacall(QItemSelectionModel_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QItemSelectionModel_Tr")]
	public static extern libqt_string QItemSelectionModel_Tr(c_char* s);
	[LinkName("QItemSelectionModel_CurrentIndex")]
	public static extern QModelIndex_Ptr QItemSelectionModel_CurrentIndex(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_IsSelected")]
	public static extern bool QItemSelectionModel_IsSelected(QItemSelectionModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QItemSelectionModel_IsRowSelected")]
	public static extern bool QItemSelectionModel_IsRowSelected(QItemSelectionModel_Ptr* self, c_int row);
	[LinkName("QItemSelectionModel_IsColumnSelected")]
	public static extern bool QItemSelectionModel_IsColumnSelected(QItemSelectionModel_Ptr* self, c_int column);
	[LinkName("QItemSelectionModel_RowIntersectsSelection")]
	public static extern bool QItemSelectionModel_RowIntersectsSelection(QItemSelectionModel_Ptr* self, c_int row);
	[LinkName("QItemSelectionModel_ColumnIntersectsSelection")]
	public static extern bool QItemSelectionModel_ColumnIntersectsSelection(QItemSelectionModel_Ptr* self, c_int column);
	[LinkName("QItemSelectionModel_HasSelection")]
	public static extern bool QItemSelectionModel_HasSelection(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_SelectedIndexes")]
	public static extern void* QItemSelectionModel_SelectedIndexes(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_SelectedRows")]
	public static extern void* QItemSelectionModel_SelectedRows(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_SelectedColumns")]
	public static extern void* QItemSelectionModel_SelectedColumns(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_Selection")]
	public static extern QItemSelection_Ptr QItemSelectionModel_Selection(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_Model")]
	public static extern QAbstractItemModel_Ptr* QItemSelectionModel_Model(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_Model2")]
	public static extern QAbstractItemModel_Ptr* QItemSelectionModel_Model2(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_SetModel")]
	public static extern void QItemSelectionModel_SetModel(QItemSelectionModel_Ptr* self, QAbstractItemModel_Ptr* model);
	[LinkName("QItemSelectionModel_SetCurrentIndex")]
	public static extern void QItemSelectionModel_SetCurrentIndex(QItemSelectionModel_Ptr* self, QModelIndex_Ptr* index, void* command);
	[LinkName("QItemSelectionModel_Select")]
	public static extern void QItemSelectionModel_Select(QItemSelectionModel_Ptr* self, QModelIndex_Ptr* index, void* command);
	[LinkName("QItemSelectionModel_Select2")]
	public static extern void QItemSelectionModel_Select2(QItemSelectionModel_Ptr* self, QItemSelection_Ptr* selection, void* command);
	[LinkName("QItemSelectionModel_Clear")]
	public static extern void QItemSelectionModel_Clear(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_Reset")]
	public static extern void QItemSelectionModel_Reset(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_ClearSelection")]
	public static extern void QItemSelectionModel_ClearSelection(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_ClearCurrentIndex")]
	public static extern void QItemSelectionModel_ClearCurrentIndex(QItemSelectionModel_Ptr* self);
	[LinkName("QItemSelectionModel_SelectionChanged")]
	public static extern void QItemSelectionModel_SelectionChanged(QItemSelectionModel_Ptr* self, QItemSelection_Ptr* selected, QItemSelection_Ptr* deselected);
	[LinkName("QItemSelectionModel_CurrentChanged")]
	public static extern void QItemSelectionModel_CurrentChanged(QItemSelectionModel_Ptr* self, QModelIndex_Ptr* current, QModelIndex_Ptr* previous);
	[LinkName("QItemSelectionModel_CurrentRowChanged")]
	public static extern void QItemSelectionModel_CurrentRowChanged(QItemSelectionModel_Ptr* self, QModelIndex_Ptr* current, QModelIndex_Ptr* previous);
	[LinkName("QItemSelectionModel_CurrentColumnChanged")]
	public static extern void QItemSelectionModel_CurrentColumnChanged(QItemSelectionModel_Ptr* self, QModelIndex_Ptr* current, QModelIndex_Ptr* previous);
	[LinkName("QItemSelectionModel_ModelChanged")]
	public static extern void QItemSelectionModel_ModelChanged(QItemSelectionModel_Ptr* self, QAbstractItemModel_Ptr* model);
	[LinkName("QItemSelectionModel_EmitSelectionChanged")]
	public static extern void QItemSelectionModel_EmitSelectionChanged(QItemSelectionModel_Ptr* self, QItemSelection_Ptr* newSelection, QItemSelection_Ptr* oldSelection);
	[LinkName("QItemSelectionModel_Tr2")]
	public static extern libqt_string QItemSelectionModel_Tr2(c_char* s, c_char* c);
	[LinkName("QItemSelectionModel_Tr3")]
	public static extern libqt_string QItemSelectionModel_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QItemSelectionModel_IsRowSelected2")]
	public static extern bool QItemSelectionModel_IsRowSelected2(QItemSelectionModel_Ptr* self, c_int row, QModelIndex_Ptr* parent);
	[LinkName("QItemSelectionModel_IsColumnSelected2")]
	public static extern bool QItemSelectionModel_IsColumnSelected2(QItemSelectionModel_Ptr* self, c_int column, QModelIndex_Ptr* parent);
	[LinkName("QItemSelectionModel_RowIntersectsSelection2")]
	public static extern bool QItemSelectionModel_RowIntersectsSelection2(QItemSelectionModel_Ptr* self, c_int row, QModelIndex_Ptr* parent);
	[LinkName("QItemSelectionModel_ColumnIntersectsSelection2")]
	public static extern bool QItemSelectionModel_ColumnIntersectsSelection2(QItemSelectionModel_Ptr* self, c_int column, QModelIndex_Ptr* parent);
	[LinkName("QItemSelectionModel_SelectedRows1")]
	public static extern void* QItemSelectionModel_SelectedRows1(QItemSelectionModel_Ptr* self, c_int column);
	[LinkName("QItemSelectionModel_SelectedColumns1")]
	public static extern void* QItemSelectionModel_SelectedColumns1(QItemSelectionModel_Ptr* self, c_int row);
}
